--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.23.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-responsive-modal": "^4.0.1",
